[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keras-aug"
authors = [{ name = "Hongyu, Chiu (james77777778)" }]
description = "A library that includes pure TF/Keras preprocessing and augmentation layers"
keywords = ["tensorflow", "keras", "preprocessing", "augmentation"]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache License 2.0" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dynamic = ["version"]
dependencies = ["keras"]

[project.urls]
Homepage = "https://github.com/james77777778/keras-aug"
Documentation = "https://kerasaug.readthedocs.io/en/latest/"
Repository = "https://github.com/james77777778/keras-aug"
Issues = "https://github.com/james77777778/keras-aug/issues"

[project.optional-dependencies]
tests = [
    # linter and formatter
    "ruff",
    "black[jupyter]",
    "pytest",
    "pytest-cov",
    "coverage",
    # tool
    "pre-commit",
    "namex",
]
examples = ["matplotlib", "opencv-python", "tensorflow-datasets"]

[tool.setuptools.packages]
find = { include = ["keras_aug*"] }

[tool.setuptools.dynamic]
version = { attr = "keras_aug.__version__" }

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80
lint.select = ["E", "W", "F"]
lint.isort.force-single-line = true
exclude = [
    ".venv",
    ".vscode",
    ".github",
    ".devcontainer",
    "venv",
    "__pycache__",
    "streamlit_app",
]

[tool.ruff.lint.per-file-ignores]
"./examples/**/*" = ["E402"]
"**/__init__.py" = ["F401"]
"**/*_utils.py" = ["F401"]

[tool.isort]
profile = "black"
force_single_line = true
known_first_party = ["keras_aug"]
line_length = 80

[tool.pytest.ini_options]
addopts = "-vv --durations 10 --cov --cov-report html --cov-report term:skip-covered --cov-report xml"
testpaths = ["keras_aug"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::ImportWarning",
    "ignore::RuntimeWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]
markers = ["large: mark test as being slow"]

[tool.coverage.run]
source = ["keras_aug"]
omit = ["**/__init__.py", "**/demo.py", "**/conditional_imports.py", "*test*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract",
    "raise NotImplementedError",
    "raise ValueError",
]
