[metadata]
license_files = LICENSE
description_file = README.md
version = attr: keras_aug.__version__

[tool:pytest]
filterwarnings =
    error
    ignore::DeprecationWarning
    ignore::ImportWarning
    ignore::RuntimeWarning
    ignore::PendingDeprecationWarning
    ignore::FutureWarning

[coverage:report]
exclude_lines =
    pragma: no cover
    @abstract
    raise NotImplementedError
    raise ValueError
omit =
    **/__init__.py
    **/demo.py
    **/conditional_imports.py
    *test*
    ./docs/**/*
    ./examples/**/*
    setup.py
